test/parser/rte/001.hac
// "rte/001.hac" -- expect fail
ebool x;
bool y;
x = y;		// error: invalid alias
